ready for realise

--- a/supervisely/labeling-tool/src/ui/settings_tab.html
+++ b/supervisely/labeling-tool/src/ui/settings_tab.html
@@ -12,19 +12,19 @@
 
     <hr class="mt10 mb10" style="border: 0; border-top: 1px solid rgba(0,0,0,.12);"/>
 
-    <sly-field
-            style="padding-top: 8px"
-            title="Object padding"
-            description="padding outside image patch">
-        <div class="fflex">
-            <el-input-number
-                    class="mt5"
-                    size="small" v-model="state.pad" :min="0"></el-input-number>
-            <div class="ml5">percent</div>
-        </div>
-    </sly-field>
+<!--    <sly-field-->
+<!--            style="padding-top: 8px"-->
+<!--            title="Object padding"-->
+<!--            description="padding outside image patch">-->
+<!--        <div class="fflex">-->
+<!--            <el-input-number-->
+<!--                    class="mt5"-->
+<!--                    size="small" v-model="state.pad" :min="0"></el-input-number>-->
+<!--            <div class="ml5">percent</div>-->
+<!--        </div>-->
+<!--    </sly-field>-->
 
-    <hr class="mt10 mb10" style="border: 0; border-top: 1px solid rgba(0,0,0,.12);"/>
+<!--    <hr class="mt10 mb10" style="border: 0; border-top: 1px solid rgba(0,0,0,.12);"/>-->
 
     <div class="fflex"
          style="padding-top: 8px;
