minor updates AI Recommends & Labeling tool

--- a/supervisely/labeling-tool/src/gui.html
+++ b/supervisely/labeling-tool/src/gui.html
@@ -68,8 +68,38 @@
             width: 100%;
             }
 
-             #gl-ml-labeling-tool .custom-full-size-slider .slider-wrapper {
+            #gl-ml-labeling-tool .custom-full-size-slider .slider-wrapper {
             width: 100%;
+            }
+
+            #gl-ml-labeling-tool .copy-button-style {
+            display: inline-block;
+            line-height: 1;
+            white-space: nowrap;
+            cursor: pointer;
+            background: #fff;
+            border: 1px solid #c4c4c4;
+            color: #1f2d3d;
+            margin: 5px 2px;
+
+            padding: 7px 9px;
+            font-size: 12px;
+            border-radius: 4px;
+
+            transition: all 0.1s;
+
+            width: 100px;
+
+
+            }
+
+            #gl-ml-labeling-tool .black-to-gold-style {
+            color: black;
+
+            }
+
+            #gl-ml-labeling-tool .black-to-gold-style:hover * {
+
             }
 
         </sly-style>
