--- a/supervisely/similarity-calculator/src/gui.html
+++ b/supervisely/similarity-calculator/src/gui.html
@@ -161,7 +161,7 @@
                     :percentage="data.progressLoadingEmbeddingsPercent"></el-progress>
 
         </div>
-
+<!--{{state.embeddingsLoaded}}-->
         <div v-if="state.embeddingsLoaded"
              class="mt10 mb5">
             <sly-field title="INFO: embeddings ready to use"
